# TMPS-Labs

./: .gitignore  CMakeLists.txt  CarManufacturer.cpp  Main.cpp  MasterHeader.h  README.md
data/: adData.json  carData.json
include/: CarModel.h
include/assembly-line/: Assembly.h  CarBuilder.h  ElectricCarBuilder.h  OffroadCarBuilder.h  SportsCarBuilder.h
include/assembly-line/builder/: CarBuilder.h  SportsCarBuilder.h
include/carManufacturing/: Car.h  CarActions.h  CarCosts.h  CarDecorator.h  CarImpl.h  CarInfoDisplay.h  CarInterface.h  CarModel.h  PersonalCar.h
include/carManufacturing/actions/: CivilCar.h  OffroadCar.h  SUVActions.h  SedanActions.h
include/carManufacturing/engine/: CoolingSystem.h  EngineFacade.h  FuelSystem.h  IgnitionSystem.h
include/carManufacturing/factory/: CarFactory.h  SUV.h  Sedan.h  SedanFactory.h
include/carManufacturing/info/: CarInfoStrategy.h  DetailedCarInfo.h  SummaryCarInfo.h
include/marketing/: Advertisement.h  Advertisements.h  Customer.h  FreeAdvertisement.h  FreeAdvertisementDisplay.h  FreeAdvertisementImpl.h  PaidAdvertisement.h  PaidAdvertisementDisplay.h  PaidAdvertisementImpl.h
include/marketing/notification/: Advertiser.h  ConcreteObserver.h  Notification.h  Observer.h
include/personnel/: Developer.h  Employee.h  EmployeeFactory.h  Manager.h  Supervisor.h  Worker.h
include/production/: Assembly.h  Product.h
include/production/builder/: ElectricCarBuilder.h  OffroadCarBuilder.h
include/production/factory/: CarFactory.h  SUV.h  SUVFactory.h  Sedan.h
include/staff/: Worker.h
include/user/: Menu.h  MenuFacade.h
include/vehicle/: CarCosts.h  CarImpl.h  CarInterface.h  CarIterator.h  CommercialCar.h  TunedCarDecorator.h
include/vehicle/actions/: CivilCar.h  OffroadCar.h  SUVActions.h  SedanActions.h
include/vehicle/components/: CoolingSystem.h
include/vehicle/info/: CarInfoDisplay.h  CarInfoStrategy.h  DetailedCarInfo.h  SummaryCarInfo.h
reports/: Lab1Report.md  Lab2Report.md  Lab3Report.md  Lab4Report.md
src/: CarModel.cpp
src/assembly-line/: Assembly.cpp  ElectricCarBuilder.cpp  OffroadCarBuilder.cpp  Product.cpp  SportsCarBuilder.cpp
src/assembly-line/builder/: ElectricCarBuilder.cpp  OffroadCarBuilder.cpp  SportsCarBuilder.cpp
src/carManufacturing/: CarCosts.cpp  CarDecorator.cpp  CarImpl.cpp  CarInfoDisplay.cpp  CarModel.cpp  CivilCar.cpp  ComercialCar.cpp  CommercialCar.cpp  OffroadCar.cpp  PersonalCar.cpp  SUVActions.cpp  SedanActions.cpp  TunedCarDecorator.cpp
src/carManufacturing/actions/: CivilCar.cpp  OffroadCar.cpp  SUVActions.cpp  SedanActions.cpp
src/carManufacturing/components/: CoolingSystem.cpp  EngineFacade.cpp  FuelSystem.cpp  IgnitionSystem.cpp
src/carManufacturing/engine/: CoolingSystem.cpp  EngineFacade.cpp  FuelSystem.cpp  IgnitionSystem.cpp
src/carManufacturing/factory/: SUV.cpp  SUVFactory.cpp  Sedan.cpp  SedanFactory.cpp
src/carManufacturing/info/: CarInfoDisplay.cpp  DetailedCarInfo.cpp  SummaryCarInfo.cpp
src/marketing/: Advertisements.cpp  Customer.cpp  FreeAdvertisementDisplay.cpp  FreeAdvertisementImpl.cpp  PaidAdvertisementDisplay.cpp  PaidAdvertisementImpl.cpp
src/marketing/notification/: ConcreteObserver.cpp
src/personnel/: Developer.cpp  Employee.cpp  EmployeeFactory.cpp  Manager.cpp  Supervisor.cpp  Worker.cpp
src/production/: Assembly.cpp  Product.cpp
src/production/builder/: ElectricCarBuilder.cpp  OffroadCarBuilder.cpp  SportsCarBuilder.cpp
src/production/factory/: SUV.cpp  SUVFactory.cpp  Sedan.cpp  SedanFactory.cpp
src/staff/: Supervisor.cpp  Worker.cpp
src/user/: Menu.cpp  MenuFacade.cpp
src/vehicle/: CarCosts.cpp  CarDecorator.cpp  CarImpl.cpp  CarIterator.cpp  TunedCarDecorator.cpp
src/vehicle/actions/: CivilCar.cpp  OffroadCar.cpp  SUVActions.cpp  SedanActions.cpp
src/vehicle/components/: CoolingSystem.cpp  EngineFacade.cpp  FuelSystem.cpp  IgnitionSystem.cpp
src/vehicle/info/: CarInfoDisplay.cpp  DetailedCarInfo.cpp  SummaryCarInfo.cpp
